doc(fix): overflow-x issue

--- a/docs/src/app.css
+++ b/docs/src/app.css
@@ -64,7 +64,3 @@
     }
   }
 }
-
-main {
-  overflow-x: unset !important;
-}
